# tee-signer

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yml
ale/: Cargo.toml
ale/src/: convert.rs  lib.rs
confidential_signer/: Cargo.toml
confidential_signer/src/: error.rs  kms_client.rs  lib.rs
confidential_signer_app/: Cargo.toml
confidential_signer_app/src/: app.rs  main.rs
confidential_signer_mock/: Cargo.toml
confidential_signer_mock/src/: app.rs  main.rs
doc/: confidential-signer.md  nitro-signer.md  rpc.md
docker/: Dockerfile  confidential_signer.Dockerfile  nitro_signer.Dockerfile
nitro_signer/: Cargo.toml
nitro_signer/src/: kms_client.rs  lib.rs  main.rs  sealant.rs
nitro_signer/src/kms_client/: vsock_proxy_client.rs
nitro_signer/src/sealant/: vsock_proxy_client.rs
nitro_signer_app/: Cargo.toml
nitro_signer_app/src/: app.rs  main.rs  nsm.rs
nitro_signer_mock/: Cargo.toml
nitro_signer_mock/src/: app.rs  main.rs
signer_core/: Cargo.toml
signer_core/src/: crypto.rs  lib.rs  rpc.rs  serde_helper.rs  signer.rs
signer_core/src/crypto/: bls.rs  ecdsa.rs  helper.rs
signer_core/src/rpc/: client.rs  net.rs  server.rs
signer_core/src/rpc/net/: vsock.rs
signer_core/src/serde_helper/: bytes.rs
vsock/: Cargo.toml
vsock/src/: asio.rs  lib.rs  utils.rs
vsock/tests/: vsock.rs
