[package]
name = "confidential_signer_mock"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace/local dependencies
confidential_signer = { path = "../confidential_signer" }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
