[package]
name = "nitro_signer"
version = "0.1.0"
edition = "2021"

[dependencies]
signer_core = { path = "../signer_core" }
vsock = { path = "../vsock" }

aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.52"
aws-smithy-runtime = { version = "1.7", features = ["client"] }
aws-smithy-runtime-api = { version = "1.7", features = ["client"] }
aws-nitro-enclaves-nsm-api = "0.4"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
tokio = { version = "1.42", features = ["full"] }
tokio-macros = "2.4"
