[package]
name = "nitro_signer"
version = "0.1.0"
edition = "2021"

[dependencies]
signer_core = { path = "../signer_core" }
vsock = { path = "../vsock" }
ale = { path = "../ale" }

aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.52"
aws-smithy-runtime = { version = "1.7", features = ["client"] }
aws-smithy-runtime-api = { version = "1.7", features = ["client"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
tokio = { version = "1.42", features = ["full"] }
tokio-macros = "2.4"
rsa = "0.9"
sha2 = "0.10"
cbc = { version = "0.1", features = ["std"] }
aes = "0.8"
const-oid = { version = "0.9", features = ["db"] }
zeroize = { version = "1.8" }

[dev-dependencies]
base64 = "0"
